welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:8: error: not found: value nbBscuit
  if (nbBscuit != 4) {
      ^